Solved merge conflicts and some additional fixes/Refactoring and JavaDoc